--- a/PhotoDrop/DropPreview.storyboard
+++ b/PhotoDrop/DropPreview.storyboard
@@ -6,8 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,41 +23,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
+                            <imageView userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoO-eI-87W" userLabel="Back Button">
-                                <rect key="frame" x="320" y="20" width="39" height="39"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="327" y="28" width="32" height="32"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="pGX-SX-v5d"/>
+                                    <constraint firstAttribute="width" secondItem="FoO-eI-87W" secondAttribute="height" multiplier="1:1" id="zcZ-j8-1tI"/>
+                                </constraints>
                                 <state key="normal" image="close-button"/>
                                 <connections>
                                     <action selector="backButtonTapped:" destination="lnm-mR-zJS" eventType="touchUpInside" id="GPh-qB-R9s"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond-gold" translatesAutoresizingMaskIntoConstraints="NO" id="Ibp-tj-iS9">
-                                <rect key="frame" x="153.5" y="591" width="68" height="68"/>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jtw-c9-Cqg">
+                                <rect key="frame" x="145.5" y="566" width="85" height="85"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Ibp-tj-iS9" secondAttribute="height" multiplier="1:1" id="fY8-IU-cOk"/>
-                                    <constraint firstAttribute="width" constant="68" id="r5f-0T-eYG"/>
+                                    <constraint firstAttribute="width" secondItem="Jtw-c9-Cqg" secondAttribute="height" multiplier="1:1" id="bec-sP-iN8"/>
+                                    <constraint firstAttribute="width" constant="85" id="enQ-pV-9oY"/>
                                 </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jtw-c9-Cqg">
-                                <rect key="frame" x="165" y="600" width="45" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="45" id="enQ-pV-9oY"/>
-                                    <constraint firstAttribute="height" constant="25" id="kze-0i-a30"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
-                                <state key="normal" title="Drop">
+                                <state key="normal" image="drop-gem">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="postButtonTapped:" destination="lnm-mR-zJS" eventType="touchUpInside" id="KFN-tA-iAm"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What makes this place a hidden gem ..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ame-RJ-Myd">
-                                <rect key="frame" x="20" y="529" width="335" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Give a hint about this place ..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ame-RJ-Myd">
+                                <rect key="frame" x="20" y="501" width="335" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -66,17 +62,15 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="C53-sZ-5Ka" secondAttribute="trailing" id="3Eh-Gr-Nnz"/>
-                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="bottom" secondItem="Ibp-tj-iS9" secondAttribute="centerY" id="6Rd-Tk-pmi"/>
-                            <constraint firstItem="Ibp-tj-iS9" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="32" id="9we-fO-nQI"/>
+                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="HPY-aO-jhb"/>
                             <constraint firstAttribute="trailing" secondItem="ame-RJ-Myd" secondAttribute="trailing" constant="20" id="NBf-Aq-JsF"/>
-                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="-20" id="XcX-dJ-dQO"/>
+                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="35" id="Qp5-DJ-mKA"/>
                             <constraint firstAttribute="trailing" secondItem="FoO-eI-87W" secondAttribute="trailing" constant="16" id="auL-So-Spr"/>
-                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="Ibp-tj-iS9" secondAttribute="bottom" constant="8" id="c6h-QN-YLp"/>
-                            <constraint firstItem="Ibp-tj-iS9" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="gLq-Uj-YNA"/>
-                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="centerX" secondItem="Ibp-tj-iS9" secondAttribute="centerX" id="kul-9K-wDm"/>
+                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="gZW-fA-gHm" secondAttribute="topMargin" id="hdD-AP-zsZ"/>
                             <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="C53-sZ-5Ka" secondAttribute="bottom" id="o9d-MZ-tQ5"/>
                             <constraint firstItem="C53-sZ-5Ka" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leading" id="sE8-UF-9QV"/>
-                            <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" id="smN-3S-PL6"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="8" id="smN-3S-PL6"/>
+                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="Jtw-c9-Cqg" secondAttribute="bottom" constant="16" id="u50-5c-4Iw"/>
                             <constraint firstItem="ame-RJ-Myd" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leading" constant="20" id="zgp-bA-S1u"/>
                         </constraints>
                     </view>
@@ -91,7 +85,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="close-button" width="39" height="39"/>
-        <image name="diamond-gold" width="38" height="32"/>
+        <image name="close-button" width="36" height="36"/>
+        <image name="drop-gem" width="101" height="87"/>
     </resources>
 </document>
