--- a/PhotoDrop/Settings.storyboard
+++ b/PhotoDrop/Settings.storyboard
@@ -71,6 +71,10 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ey-m7-dLw" userLabel="Back Button">
                                 <rect key="frame" x="28" y="24" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="2Ey-m7-dLw" secondAttribute="height" multiplier="1:1" id="ZWI-X1-4Rt"/>
+                                    <constraint firstAttribute="width" constant="32" id="Zxq-t9-tnX"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" image="back-button-white"/>
                                 <connections>
@@ -106,7 +110,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="back-button-white" width="32" height="32"/>
+        <image name="back-button-white" width="54" height="54"/>
         <image name="save-button" width="88" height="88"/>
         <image name="settings-background" width="548" height="689"/>
     </resources>
