--- a/PhotoDrop/Points.storyboard
+++ b/PhotoDrop/Points.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="eBg-wF-dOt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="eBg-wF-dOt">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -52,7 +52,7 @@
                                             <constraint firstAttribute="width" secondItem="WBp-9t-hTV" secondAttribute="height" multiplier="1:1" id="ra1-33-gGK"/>
                                         </constraints>
                                         <connections>
-                                            <segue destination="br8-FJ-N4o" kind="show" id="93Y-d8-hs1"/>
+                                            <segue destination="br8-FJ-N4o" kind="show" animates="NO" id="93Y-d8-hs1"/>
                                         </connections>
                                     </button>
                                 </subviews>
