--- a/PhotoDrop/Settings.storyboard
+++ b/PhotoDrop/Settings.storyboard
@@ -79,6 +79,7 @@
                                 <state key="normal" image="back-button-white"/>
                                 <connections>
                                     <action selector="backButtonTapped:" destination="FsU-qH-V6l" eventType="touchUpInside" id="oOC-i3-aDU"/>
+                                    <segue destination="lQo-ke-LVP" kind="unwind" unwindAction="myUnwindActionWithUnwindSegue:" id="F2P-4b-B8s"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -105,6 +106,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gJU-GF-e0F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="lQo-ke-LVP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="724" y="126"/>
         </scene>
