--- a/PhotoDrop/Loading.storyboard
+++ b/PhotoDrop/Loading.storyboard
@@ -34,7 +34,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diamond app icon" translatesAutoresizingMaskIntoConstraints="NO" id="yD6-Ry-t9W">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="no border" translatesAutoresizingMaskIntoConstraints="NO" id="yD6-Ry-t9W">
                                 <rect key="frame" x="35" y="253" width="305" height="222"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -76,6 +76,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="diamond app icon" width="768" height="768"/>
+        <image name="no border" width="1239" height="1107"/>
     </resources>
 </document>
